Stop hardcoding text size for collapsed headings.

--- a/assets/styles/components/_collapsible-section.scss
+++ b/assets/styles/components/_collapsible-section.scss
@@ -29,7 +29,6 @@
 }
 
 .header-text-inner {
-    font-size: 1.5rem;
     margin: 0;
     line-height: 1.5;
     font-weight: bold;
